hover state on logo

--- a/src/components/index.tailwind.css
+++ b/src/components/index.tailwind.css
@@ -88,10 +88,12 @@ a{
   left: 4px;
 }
 
-.content a:hover:before{
+.content a:hover:before,
+a.highlight:before{
   bottom:1px;
   left:0;
 }
+
 .content blockquote{
   margin:2.5rem auto 2.5rem auto;
   font-size:24px;
