--- a/src/components/index.css
+++ b/src/components/index.css
@@ -714,11 +714,13 @@ a {
 
 .content blockquote {
   margin: 2.5rem auto 2.5rem auto;
-  font-size: 24px;
   position: relative;
   font-style: italic;
   max-width: 600px;
   z-index: 1;
+}
+.content blockquote p{
+  font-size: 24px;
 }
 
 .content blockquote:before,
