--- a/src/components/index.tailwind.css
+++ b/src/components/index.tailwind.css
@@ -131,7 +131,7 @@ a{
   font-size:18px;
   line-height: 1.7;
 }
-.content li:before{
+.content ul li:before{
   content:'';
   position: absolute;
   left:0;
@@ -143,6 +143,24 @@ a{
 }
 .content p{
   margin: 1rem 0;
+}
+.content table{
+ border: 1px solid #e9e8e8;
+ border-collapse: collapse;
+ margin:0 0 1rem;
+ padding: 0;
+ width: 100%;
+}
+.content th, td{
+ padding:12px 5px;
+ border:1px solid #e9e8e8;
+}
+.content th{
+ text-align: center;
+ font-weight:bold;
+}
+.content tr:nth-child(2n){
+ background-color: #f1f1f1;
 }
 
 .content p.intro{
