--- a/src/components/index.tailwind.css
+++ b/src/components/index.tailwind.css
@@ -167,6 +167,10 @@ a{
   margin-top: 0;
 }
 
+.content a.anchor::before{
+ content:none;
+}
+
 @tailwind utilities;
 /**
   * Here you would add any custom utilities you need that don't come out of the
