--- a/src/components/index.css
+++ b/src/components/index.css
@@ -688,14 +688,16 @@ a {
 /* Content Block styling */
 
 .highlight,
-.content a {
+.content a,
+p > a {
   color: inherit;
   position: relative;
   z-index: 1;
 }
 
 .highlight:before,
-.content a:before {
+.content a:before,
+p > a:before {
   content: '';
   transition: .15s ease-in;
   position: absolute;
